--- a/css/header.scss
+++ b/css/header.scss
@@ -13,7 +13,7 @@
 		padding: 30px 60px;
 		border-radius: 50px;
 		margin: 0 50px;
-		background: url("../images/header-bar_bg.png") 50% 50% no-repeat;
+		background: url("../images/header-bar_bg.jpeg") 50% 50% no-repeat;
 		background-size: cover;
 	}
 	&__list {
