--- a/css/our-team.scss
+++ b/css/our-team.scss
@@ -44,7 +44,7 @@
 		width: 100%;
 		height: auto;
 		min-height: 350px;
-		background: url("../images/maxym-sitnikov.png") 50% 50% no-repeat;
+		background: url("../images/maxym-sitnikov.jpeg") 50% 50% no-repeat;
 		background-size: cover;
 		border-radius: 40px;
 		&:not(:last-child) {
