--- a/assets/main.css
+++ b/assets/main.css
@@ -142,7 +142,7 @@ input::-webkit-inner-spin-button {
   padding: 30px 60px;
   border-radius: 50px;
   margin: 0 50px;
-  background: url("../images/header-bar_bg.png") 50% 50% no-repeat;
+  background: url("../images/header-bar_bg.jpeg") 50% 50% no-repeat;
   background-size: cover;
 }
 .header__list {
@@ -181,7 +181,7 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: 100vh;
   min-height: 800px;
-  background: url("../images/we-are_bg.png") 50% 50% no-repeat;
+  background: url("../images/we-are_bg.jpeg") 50% 50% no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -551,7 +551,7 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: auto;
   min-height: 350px;
-  background: url("../images/maxym-sitnikov.png") 50% 50% no-repeat;
+  background: url("../images/maxym-sitnikov.jpeg") 50% 50% no-repeat;
   background-size: cover;
   border-radius: 40px;
 }
