--- a/css/we-are.scss
+++ b/css/we-are.scss
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: 100vh;
 	min-height: 800px;
-	background: url("../images/we-are_bg.png") 50% 50% no-repeat;
+	background: url("../images/we-are_bg.jpeg") 50% 50% no-repeat;
 	background-size: cover;
 	position: relative;
 	&__word {
