--- a/css/reset.scss
+++ b/css/reset.scss
@@ -24,6 +24,8 @@ a {
 
 h1, h2, h3, h4, h5, h6, p {margin-bottom: 0;}
 
+p, li, a {word-wrap: break-word;}
+
 ul, li, ul>li {
 	list-style-type: none;
 }
