--- a/css/clickbait.scss
+++ b/css/clickbait.scss
@@ -7,7 +7,7 @@
 		text-align: center;
 	}
 	&__headline {
-		text-transform: uppercase;
+		text-transform: capitalize;
 	}
 	&__img {
 		margin-bottom: 70px;
@@ -21,7 +21,7 @@
 	&__description {
 		width: 100%;
 		max-width: 768px;
-		margin: 70px auto;
+		margin: 50px auto;
 		p {
 			font-family: "Roboto", sans-serif;
 			font-size: 24px;
