--- a/css/projects.scss
+++ b/css/projects.scss
@@ -2,15 +2,27 @@
 .projects {
 	margin-top: 200px;
 	margin-bottom: 75px;
+	&__bg-img {
+		width: 10%;
+		height: auto;
+		position: absolute;
+		top: -7%;
+		right: -7%;
+		z-index: -1;
+	}
+	.projects__headline {
+		margin-bottom: 60px;
+		h2 {text-transform: uppercase;}
+	}
 	&__container {
+		position: relative;
 		border: 3px solid #DFDFDF;
-		padding: 15px 0;
 		margin-top: 20px;
+		overflow-y: scroll;
 	}
 	&__item {
-		&:not(:nth-last-child(-n+3)) {
-			margin-bottom: 30px;
-		}
+		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 	&__type {
 		&__list {
@@ -27,6 +39,10 @@
 		border: 1px solid #000;
 		text-transform: capitalize;
 		padding: 10px 25px;
+		&--active {
+			background-color: #000;
+			color: #fff;
+		}
 	}
 	&__img {
 		width: 100%;
