--- a/assets/main.css
+++ b/assets/main.css
@@ -987,7 +987,7 @@ input::-webkit-inner-spin-button {
   display: inline-block;
   position: relative;
 }
-.modal .form__btn .form__user-btn__ico {
+.modal .form__btn .fa-telegram-plane {
   width: 52px;
   height: 52px;
   display: -webkit-box;
@@ -996,9 +996,6 @@ input::-webkit-inner-spin-button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   border-radius: 50%;
   position: absolute;
   right: -20px;
@@ -1006,11 +1003,10 @@ input::-webkit-inner-spin-button {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background: linear-gradient(45deg, #09e5fd 0%, #ff00ec 100%);
-}
-.modal .form__btn .form__user-btn__ico i {
-  margin-right: 4px;
+  padding-left: 6px;
   font-size: 40px;
   color: #000;
+  cursor: pointer;
 }
 .modal .form__user-name {
   width: 70%;
