--- a/assets/main.css
+++ b/assets/main.css
@@ -346,7 +346,7 @@ input::-webkit-inner-spin-button {
 }
 .how-work__drops {
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 0;
 }
 .how-work__drops--small {
