--- a/assets/main.css
+++ b/assets/main.css
@@ -547,7 +547,7 @@ input::-webkit-inner-spin-button {
 }
 .projects__container {
   position: relative;
-  height: 384px;
+  height: 402px;
   border: 3px solid #DFDFDF;
   margin-top: 20px;
   overflow-y: scroll;
@@ -578,6 +578,7 @@ input::-webkit-inner-spin-button {
 }
 .projects__img {
   width: 100%;
+  height: 100%;
 }
 .projects .show {
   display: block;
@@ -588,12 +589,12 @@ input::-webkit-inner-spin-button {
 
 @media screen and (max-width: 1199px) {
   .projects__container {
-    height: 324px;
+    height: 340px;
   }
 }
 @media screen and (max-width: 991px) {
   .projects__container {
-    height: 244px;
+    height: 254px;
   }
   .projects__type:not(:last-child) {
     margin-right: 20px;
@@ -899,6 +900,7 @@ input::-webkit-inner-spin-button {
 }
 /* MODAL */
 .modal {
+  cursor: pointer;
   background-color: #000;
 }
 .modal__img {
@@ -929,11 +931,13 @@ input::-webkit-inner-spin-button {
   left: 4%;
 }
 .modal-dialog {
-  max-width: 90vw;
+  cursor: default;
+  max-width: 100vw;
+  margin: 1.75em;
 }
 .modal-content {
   height: auto;
-  min-height: 90vh;
+  min-height: 100vh;
   padding: 0 !important;
   border-radius: 140px;
   background: url("../images/modal-bg.png") 50% 50% no-repeat;
@@ -1030,8 +1034,24 @@ input::-webkit-inner-spin-button {
 .modal .form__user-order {
   width: 100%;
 }
+.modal__exit {
+  cursor: pointer;
+  position: absolute;
+  top: -15px;
+  right: 0;
+  font-size: 40px;
+  color: #fff;
+}
 
+@media screen and (max-width: 991px) {
+  .modal .container {
+    margin-top: 70px;
+  }
+}
 @media screen and (max-width: 575px) {
+  .modal-content {
+    border-radius: 105px;
+  }
   .modal-dialog {
     max-width: 100vw;
   }
